k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app-container
        image: public.ecr.aws/p3b6w3x9/eks-cluster:v3
        #imagePullPolicy: Never
        ports:
        - containerPort: 8080
